# course-advisor

./: README.md  pyproject.toml
course-advisor/: pyproject.toml
course-advisor/src/course_advisor/: app.py
src/course-advisor/: app.py
