[project]
name = "course-advisor"
version = "0.1.0"
description = ""
authors = [
    {name = "afw825",email = "austinwarmelink@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.13.4"
dependencies = [
    "streamlit (>=1.53.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "course_advisor", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
